--- a/manifests/kustomize/env/dev/kustomization.yaml
+++ b/manifests/kustomize/env/dev/kustomization.yaml
@@ -6,7 +6,7 @@ bases:
   - ../../third-party/application
   - ../../base/application
   - ../platform-agnostic
-  - ../gcp/inverse-proxy
+  #- ../gcp/inverse-proxy
 
 # Identifier for application manager to apply ownerReference.
 # The ownerReference ensures the resources get garbage collected
